# Taraol

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  common.py
agents/alpha/: Dockerfile  __init__.py  main.py
agents/beta/: Dockerfile  __init__.py  main.py
agents/critic/: Dockerfile  __init__.py  main.py
agents/planner/: Dockerfile  __init__.py  main.py
agents/researcher/: Dockerfile  __init__.py  main.py
agents/router/: Dockerfile  __init__.py  main.py
agents/writer/: Dockerfile  __init__.py  main.py
config/: pricing.yaml
deploy/signoz/: README.md  casting.yaml
detection/: Dockerfile  README.md  __init__.py  audit.py  budget.py  config.py  control_client.py  controller.py  cycle.py  loop_watcher.py  signals.py  signoz_client.py  xconv_cycle.py
docs/: ARCHITECTURE.md  DEMO-alert-flow.md  DEMO.md
docs/adr/: 0001-record-architecture-decisions.md
mcp_tool/: __init__.py  server.py
scripts/: demo.py  validate_artifacts.py
signoz/alerts/: budget-exceeded.json  edge-breaker.json  loop-detected.json  (+2 more)
tests/: test_a2a_roundtrip.py  test_alert_rule.py  test_audit.py  test_breaker.py  test_breaker_short_circuit.py  test_budget.py  test_controller.py  test_cost_formula.py  test_cost_on_spans.py  test_cycle.py  test_detection_architecture.py  test_explain.py  test_genai_spans.py  test_guardrail.py  test_llm.py  test_loop_path.py  test_loop_watcher.py  test_mesh_topology.py  test_pause_semantics.py  test_pricing_models.py  test_propagation.py  test_provenance.py  test_quality.py  test_signals.py  test_signoz_client.py  test_six_signals.py  test_smoke.py  test_taint_propagation.py  test_xconv_cycle.py
(+35 files in other folders)
